crates/skel/tests/snapshots/adherence__adhere@lock-order_cycle_3lock.snap
---
source: crates/skel/tests/adherence.rs
expression: md
---
# Skeleton adherence report (human review only)

skeleton: `benchmarks/tasks/lock-order/cycle_3lock/gold.skel`

## main::main

matched Rust fn: `main`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 8 | spawn t1 | matched | 52 |
| 8 | spawn t2 | matched | 54 |
| 8 | spawn t3 | matched | 56 |

## main::t1

matched Rust fn: `t1`; DSL lock depth 2; Rust lock calls 2

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 11 | lock a | matched | 17 |
| 11 | lock b | matched | 18 |

## main::t2

matched Rust fn: `t2`; DSL lock depth 2; Rust lock calls 2

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 14 | lock b | matched | 27 |
| 14 | lock c | matched | 28 |

## main::t3

matched Rust fn: `t3`; DSL lock depth 2; Rust lock calls 2

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 17 | lock a | matched | 37 |
| 17 | lock c | matched | 38 |
