crates/skel/tests/snapshots/adherence__adhere@lock-order_two_independent_cycles.snap
---
source: crates/skel/tests/adherence.rs
expression: md
---
# Skeleton adherence report (human review only)

skeleton: `benchmarks/tasks/lock-order/two_independent_cycles/gold.skel`

## main::main

matched Rust fn: `main`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 9 | spawn t1 | matched | 60 |
| 9 | spawn t2 | matched | 62 |
| 9 | spawn t3 | matched | 64 |
| 9 | spawn t4 | matched | 66 |

## main::t1

matched Rust fn: `t1`; DSL lock depth 2; Rust lock calls 2

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 12 | lock a | matched | 12 |
| 12 | lock b | matched | 15 |

## main::t2

matched Rust fn: `t2`; DSL lock depth 2; Rust lock calls 2

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 15 | lock a | matched | 23 |
| 15 | lock b | matched | 24 |

## main::t3

matched Rust fn: `t3`; DSL lock depth 2; Rust lock calls 2

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 18 | lock c | matched | 33 |
| 18 | lock d | matched | 36 |

## main::t4

matched Rust fn: `t4`; DSL lock depth 2; Rust lock calls 2

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 21 | lock c | matched | 44 |
| 21 | lock d | matched | 45 |
