crates/skel/tests/snapshots/adherence__adhere@semaphore_permit_leak.snap
---
source: crates/skel/tests/adherence.rs
expression: md
---
# Skeleton adherence report (human review only)

skeleton: `benchmarks/tasks/semaphore/permit_leak/gold.skel`

## main::main

matched Rust fn: `main`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 6 | spawn w1 | matched | 36 |
| 6 | spawn w2 | matched | 38 |

## main::w1

matched Rust fn: `w1`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 9 | permit s | matched | 13 |

## main::w2

matched Rust fn: `w2`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 12 | permit s | matched | 18 |
