crates/skel/tests/snapshots/adherence__adhere@semaphore_throttle_n_permits.snap
---
source: crates/skel/tests/adherence.rs
expression: md
---
# Skeleton adherence report (human review only)

skeleton: `benchmarks/tasks/semaphore/throttle_n_permits/gold.skel`

## main::main

matched Rust fn: `main`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 6 | spawn w1 | matched | 38 |
| 6 | spawn w2 | matched | 40 |
| 6 | spawn w3 | matched | 42 |

## main::w1

matched Rust fn: `w1`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 9 | permit s | matched | 12 |

## main::w2

matched Rust fn: `w2`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 12 | permit s | matched | 20 |

## main::w3

matched Rust fn: `w3`; DSL lock depth 0; Rust lock calls 0

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 15 | permit s | matched | 28 |
