crates/skel/tests/snapshots/adherence__adhere@structure_finite_call_loop.snap
---
source: crates/skel/tests/adherence.rs
expression: md
---
# Skeleton adherence report (human review only)

skeleton: `benchmarks/tasks/structure/finite_call_loop/gold.skel`
