crates/skel/tests/snapshots/adherence__adhere@structure_scope_worker_abba.snap
---
source: crates/skel/tests/adherence.rs
expression: md
---
# Skeleton adherence report (human review only)

skeleton: `benchmarks/tasks/structure/scope_worker_abba/gold.skel`

## main::main

matched Rust fn: `main`; DSL lock depth 0; Rust lock calls 2

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 7 | spawn w1 | matched | 24 |
| 7 | spawn w2 | matched | 26 |

## main::w1

matched Rust fn: `w1`; DSL lock depth 2; Rust lock calls 2

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 10 | lock a | matched | 7 |
| 10 | lock b | matched | 8 |

## main::w2

matched Rust fn: `w2`; DSL lock depth 2; Rust lock calls 2

| dsl line | statement | status | rust line |
| --- | --- | --- | --- |
| 13 | lock a | matched | 14 |
| 13 | lock b | matched | 15 |
